--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,6 @@ body {
 .wrapper {
   display: -ms-flexbox;
   display: flex;
-  margin-left: 10px;
 }
 
 .sidebar {
@@ -60,10 +59,11 @@ body {
 /* Splash */
 .splash {
   position: relative;
-  height: 40vh;
+  height: 450px;
   background-image: url("https://i.ibb.co/6rX25S0/mohammad-metri-1o-Kx-SKSOow-E-unsplash.jpg");
   background-size: cover;
-  background-position: center;
+  background-attachment: fixed;
+  background-position: 0 -280px;
   margin-bottom: 30px;
 }
 
@@ -106,21 +106,30 @@ body {
 }
 
 /* Authors */
-.authors li {
+.films li {
   margin-bottom: 12px;
 }
 
 /* Post */
 .posts {
+  position: relative;
   box-shadow: 2px 5px 35px 1px #e1d1b7;
+  min-height: 520px;
 }
 
 .post {
-  display: none;
+  position: absolute;
+  opacity: 0;
+  z-index: 0;
+  top: 0;
+  left: 0;
+  padding: 0 20px;
 }
 
 .post.active {
-  display: block;
+  transition: all 4s ease-out;
+  opacity: 1;
+  z-index: 1001;
 }
 
 .post-author {
