--- a/sass/style.scss
+++ b/sass/style.scss
@@ -45,7 +45,6 @@ body {
 
 .wrapper {
   display: flex;
-  margin-left: 10px;
 }
 
 .sidebar {
@@ -68,10 +67,11 @@ body {
 
 .splash {
   position: relative;
-  height: 40vh;
+  height: 450px;
   background-image: url('https://i.ibb.co/6rX25S0/mohammad-metri-1o-Kx-SKSOow-E-unsplash.jpg');
   background-size: cover;
-  background-position: center;
+  background-attachment: fixed;
+  background-position: 0 -280px;
   margin-bottom: 30px;
 }
 
@@ -116,21 +116,32 @@ body {
 
 /* Authors */
 
-.authors {
+.films {
   li {
     margin-bottom: 12px;
   }
 }
 
 /* Post */
+
 .posts {
+  position: relative;
   box-shadow: 2px 5px 35px 1px rgba(225,209,183,1);
+  min-height: 520px;
+  //overflow: auto;
 }
 
 .post {
-  display: none;
+  position: absolute;
+  opacity: 0;
+  z-index: 0;
+  top: 0;
+  left: 0;
+  padding: 0 20px;
   &.active {
-    display: block;
+    transition: all 4s ease-out;
+    opacity: 1;
+    z-index: 1001;
   }
 }
 
