--- a/css/style.css
+++ b/css/style.css
@@ -58,30 +58,75 @@ body {
 
 /* Splash */
 .splash {
-  position: relative;
-  height: 450px;
-  background-image: url("https://i.ibb.co/6rX25S0/mohammad-metri-1o-Kx-SKSOow-E-unsplash.jpg");
+  height: 70vh;
+  width: calc(100vw - 32px);
+  background-image: url("/images/splash.png");
   background-size: cover;
   background-attachment: fixed;
-  background-position: 0 -280px;
-  margin-bottom: 30px;
+  background-position: top;
 }
 
 /* Logo */
-.splash-inner {
-  position: absolute;
-  width: 100%;
-  bottom: 0;
-  margin-bottom: 35px;
-}
-
-.splash-inner .logo {
-  font-family: "Sacramento", cursive;
+.logo {
+  height: 30vh;
+  font-family: "Oswald", sans-serif;
   font-weight: 400;
-  font-size: 104px;
-  line-height: 1;
+  font-size: 100px;
   text-align: center;
   margin: 0;
+  padding: 30px;
+}
+
+/* mobile-menu */
+.mobile-menu {
+  display: none;
+  text-align: center;
+  margin: 0 auto 60px auto;
+  padding: 0 30px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.menu {
+  padding: 0;
+}
+
+.menu li {
+  position: relative;
+  display: inline-block;
+  margin: 0 30px;
+}
+
+.menu li ul {
+  display: none;
+  position: absolute;
+  background: rgba(255, 255, 255, 0.85);
+  width: 70vw;
+  left: -150px;
+  z-index: 1001;
+  padding: 20px 0;
+}
+
+.menu li ul a {
+  color: #000000;
+}
+
+.menu li ul a:hover {
+  color: #E1D1B7;
+}
+
+.menu li:hover ul {
+  display: block;
+}
+
+.menu li a {
+  text-decoration: none;
+  color: #E1D1B7;
+}
+
+.menu li a:hover {
+  font-weight: bold;
+  color: #3D2620;
 }
 
 /* Lists */
@@ -115,6 +160,7 @@ body {
   position: relative;
   box-shadow: 2px 5px 35px 1px #e1d1b7;
   min-height: 520px;
+  z-index: 0;
 }
 
 .post {
@@ -143,5 +189,27 @@ body {
 
 .post-tags p {
   margin: 0 10px 0 0;
+}
+
+/* Media */
+@media (max-width: 767px) {
+  .splash {
+    height: 30vh;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: top;
+  }
+  .logo {
+    height: auto;
+  }
+  .sidebar {
+    display: none;
+  }
+  .mobile-menu {
+    display: block;
+  }
+  .posts {
+    margin: 0 30px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
