--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,6 @@ body {
 .posts {
   position: relative;
   box-shadow: 2px 5px 35px 1px #e1d1b7;
-  min-height: 520px;
   z-index: 0;
 }
 
@@ -169,7 +168,7 @@ body {
   z-index: 0;
   top: 0;
   left: 0;
-  padding: 0 20px;
+  padding: 20px 20px;
 }
 
 .post.active {
@@ -180,6 +179,10 @@ body {
 
 .post-author {
   font-style: italic;
+}
+
+.post-title {
+  margin-top: 0;
 }
 
 .post-tags {
