--- a/sass/style.scss
+++ b/sass/style.scss
@@ -171,7 +171,6 @@ body {
 .posts {
   position: relative;
   box-shadow: 2px 5px 35px 1px rgba(225,209,183,1);
-  min-height: 520px;
   z-index: 0;
   //overflow: auto;
 }
@@ -182,7 +181,7 @@ body {
   z-index: 0;
   top: 0;
   left: 0;
-  padding: 0 20px;
+  padding: 20px 20px;
   &.active {
     transition: all 4s ease-out;
     opacity: 1;
@@ -192,6 +191,10 @@ body {
 
 .post-author {
   font-style: italic;
+}
+
+.post-title {
+  margin-top: 0;
 }
 
 .post-tags {
