--- a/css/style.css
+++ b/css/style.css
@@ -33,19 +33,28 @@ body {
 }
 
 /* Layout */
-.wrapper {
+.row {
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
 }
 
-.sidebar {
-  -ms-flex: 1 0 0px;
-      flex: 1 0 0;
+.sidebar-left {
+  -ms-flex-order: 1;
+      order: 1;
 }
 
 .posts {
   -ms-flex: 2 0 0px;
       flex: 2 0 0;
+  -ms-flex-order: 2;
+      order: 2;
+}
+
+.sidebar-right {
+  -ms-flex-order: 3;
+      order: 3;
 }
 
 .sidebar, .posts {
@@ -54,6 +63,17 @@ body {
   padding: 10px 40px;
   /* border: 1px solid $color-light; */
   border-radius: 5px;
+}
+
+a {
+  text-decoration: none;
+  font-weight: bold;
+  font-family: "Source Sans Pro", sans-serif;
+  color: #E1D1B7;
+}
+
+a li {
+  font-weight: normal;
 }
 
 /* Splash */
@@ -75,58 +95,6 @@ body {
   text-align: center;
   margin: 0;
   padding: 30px;
-}
-
-/* mobile-menu */
-.mobile-menu {
-  display: none;
-  text-align: center;
-  margin: 0 auto 60px auto;
-  padding: 0 30px;
-  font-size: 20px;
-  font-weight: bold;
-}
-
-.menu {
-  padding: 0;
-}
-
-.menu li {
-  position: relative;
-  display: inline-block;
-  margin: 0 30px;
-}
-
-.menu li ul {
-  display: none;
-  position: absolute;
-  background: rgba(255, 255, 255, 0.85);
-  width: 70vw;
-  left: -150px;
-  z-index: 1001;
-  padding: 20px 0;
-}
-
-.menu li ul a {
-  color: #000000;
-}
-
-.menu li ul a:hover {
-  color: #E1D1B7;
-}
-
-.menu li:hover ul {
-  display: block;
-}
-
-.menu li a {
-  text-decoration: none;
-  color: #E1D1B7;
-}
-
-.menu li a:hover {
-  font-weight: bold;
-  color: #3D2620;
 }
 
 /* Lists */
@@ -195,7 +163,7 @@ body {
 }
 
 /* Media */
-@media (max-width: 767px) {
+@media (max-width: 992px) {
   .splash {
     height: 30vh;
     background-repeat: no-repeat;
@@ -205,14 +173,23 @@ body {
   .logo {
     height: auto;
   }
-  .sidebar {
-    display: none;
-  }
-  .mobile-menu {
-    display: block;
-  }
   .posts {
     margin: 0 30px;
+    -ms-flex: auto;
+        flex: auto;
+  }
+  .sidebar {
+    -ms-flex-order: 1;
+        order: 1;
+  }
+  .tags-wrap {
+    display: none;
+  }
+  .list {
+    display: none;
+  }
+  .section-title:hover .list {
+    display: block;
   }
 }
 /*# sourceMappingURL=style.css.map */
