--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,6 @@ a li {
 }
 
 .list a {
-  color: #E1D1B7;
   text-decoration: none;
   padding: 5px;
 }
@@ -165,6 +164,36 @@ a li {
 
 .post-tags p {
   margin: 0 10px 0 0;
+}
+
+/* Tags Cloud */
+.tag-size-1 {
+  font-size: 70%;
+}
+
+.tag-size-2 {
+  font-size: 90%;
+  color: #EEC584;
+}
+
+.tag-size-3 {
+  font-size: 105%;
+  color: #C8AB83;
+}
+
+.tag-size-4 {
+  font-size: 120%;
+  color: #CACAAA;
+}
+
+.tag-size-5 {
+  font-size: 140%;
+  color: #7F636E;
+}
+
+.tag-size-6 {
+  font-size: 200%;
+  color: #55868C;
 }
 
 /* Media */
