--- a/css/style.css
+++ b/css/style.css
@@ -26,10 +26,18 @@ body {
   font-weight: 600;
 }
 
-.section-title span {
+a span {
+  font-size: 18px;
   text-transform: none;
-  font-weight: 400;
-  color: white;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: normal;
+}
+
+a .authors, a .titles {
+  font-size: 16px;
+  text-transform: none;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: normal;
 }
 
 /* Layout */
@@ -67,13 +75,8 @@ body {
 
 a {
   text-decoration: none;
-  font-weight: bold;
   font-family: "Source Sans Pro", sans-serif;
   color: #E1D1B7;
-}
-
-a li {
-  font-weight: normal;
 }
 
 /* Splash */
@@ -118,7 +121,6 @@ a li {
   display: inline-block;
 }
 
-/* Authors */
 .films li {
   margin-bottom: 12px;
 }
